--- a/styles/about.css
+++ b/styles/about.css
@@ -17,8 +17,14 @@ body{
 }
 
 .profile-pic{
-    max-width: 100%;
-	/*border: black 2px solid;*/
+    max-width: 300px;
+    height: 100px;
+    margin-top: 90px;
+	border: black 2px solid;
+	animation-duration: 4s;
+	-webkit-animation-duration:4s;
+	-webkit-animation-delay: 2s;
+	-webkit-animation-iteration-count: infinite;
 
 }
 .card-text {
@@ -34,8 +40,27 @@ body{
 }
 
 .card {
-	margin-top: 50px;
+	margin-top: 20px;
 }
 .card-title {
 	padding: 5px 10px 0 10px;
 }
+
+.card-title:hover {
+	color: maroon;
+	font-size: 30px;
+}
+.video {
+	margin: 0 auto;
+	display: block;
+}
+.trasparent{
+	background-color: transparent;
+	border: none;
+}
+.profile-card{
+	background: url(../images/yo.jpg);
+	background-size: 400px 170px;
+	background-repeat: no-repeat;
+}
+
